# LogWizard

./: .env.example  .gitignore  README.md  pyproject.toml  test_digest.py
backup_20260415/: agent.py  api.py  architecture.html  config.py  dashboard.html  knowledge.py  tools.py
data/: digest_subscribers.json
data/logs/: structured_events.json
echelon/: agent.py  alerter.py  api.py  cli.py  config.py  digest.py  knowledge.py  tools.py
echelon/sources/: azdevops_source.py  file_source.py  splunk_source.py
echelon/static/: dashboard.html  index.html
logwizard/: agent.py  api.py  cli.py  config.py  knowledge.py  tools.py
logwizard/sources/: base.py  file_source.py  splunk_source.py
logwizard/static/: index.html
teams/: SETUP.md  manifest.json
