[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logwizard"
version = "0.1.0"
description = "Agentic AI that scans application logs, performs root cause analysis, and learns from past incidents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "openai>=1.30",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
    "chromadb>=0.4,<0.6",
    "splunk-sdk>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.25",
    "rich>=13.5",
    "python-dotenv>=1.0",
    "tiktoken>=0.5",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
logwizard = "logwizard.cli:main"

[tool.setuptools.packages.find]
include = ["logwizard*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
